# rbsf-racing-irobocity

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml
deploy/: Dockerfile.base  Dockerfile.racing
docs/: 00_DISTRIBUTED_BRINGUP.md  00_TELEOP_SLAM.md  01_WALL_FOLLOWING.md  02_AUTONOMOUS_SLAM.md  03_CENTERLINE_TRACKING.md  INSTALL.md
scripts/centerline/: centerline_production.py  centerline_solution.py  centerline_solution_headless.py  centerline_student.py  extract_centerline.py  pasillo_map.pgm  pasillo_map.yaml  preprocess_maps.py
scripts/centerline/Catalunya_2026-06-22/: centerline_output.csv
src/base_system/rbsf_bringup/: package.xml  setup.cfg  setup.py
src/base_system/rbsf_bringup/launch/: bringup.launch.py  visualization.launch.py
src/base_system/rbsf_bringup/rviz/: base_cfg.rviz
src/base_system/rbsf_mvsim/: package.xml  setup.cfg  setup.py
src/base_system/rbsf_mvsim/config/: joy_teleop_slam.yaml  mvsim_vehicle.yaml  mvsim_worlds.yaml
src/base_system/rbsf_mvsim/definitions/: ackermann.vehicle.xml  f1tenth.xml  helios-32-FOV-31.sensor.xml  hokuyo-ust-10lx.sensor.xml  jackal.vehicle.xml  rgbd_camera.sensor.xml  traxxas-ford-st.vehicle.xml
src/base_system/rbsf_mvsim/launch/: demo_rbsf.launch.py  launch_world.launch.py  slam_rbsf.launch.py
src/base_system/rbsf_mvsim/maps/: club_circuit.world.xml  f1tenth_catalunya.world.xml  f1tenth_saopaulo.world.xml  f1tenth_yasmarina.world.xml  hallway_simulation_sci.world.xml  simple_oval.world.xml
src/base_system/rbsf_mvsim/models/: cylinder.stl  hokuyo_ust-10lx.dae  trash_can_01.dae  wall.dae
src/base_system/rbsf_mvsim/rbsf_mvsim/: world_generator.py
src/base_system/rbsf_mvsim/rviz/: traxxas_sim.rviz
src/base_system/rbsf_mvsim/src/: map_to_mvsim.py
src/controller/: README.md
src/controller/rbsf_centerline_tracking/: package.xml  setup.cfg  setup.py
src/controller/rbsf_centerline_tracking/config/: centerline_tracking_real.yaml  (+1 more)
src/controller/rbsf_wall_follower/: package.xml  setup.cfg  setup.py
src/controller/rbsf_wall_following/: package.xml  setup.cfg  setup.py
src/localization/rbsf_slam_toolbox/: package.xml  setup.cfg  setup.py
src/stack_launcher/: package.xml  setup.cfg  setup.py
src/stack_launcher/launch/: 00_distributed_bringup.launch.py  00_teleop_slam.launch.py  01_wall_following.launch.py  02_autonomous_slam.launch.py  03_centerline_tracking.launch.py
src/stack_launcher/stack_launcher/: ackermann_to_twist_node.py  keyboard_teleop_node.py  simple_movement_node.py  simple_odom_node.py
(+17 files in other folders)
