<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stack_launcher</name>
  <version>0.0.0</version>
  <description>Launch files and utilities for the iRobocity racing stack.</description>
  <maintainer email="santi@todo.todo">santi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rbsf_bringup</exec_depend>
  <exec_depend>rbsf_mvsim</exec_depend>
  <exec_depend>rbsf_wall_following</exec_depend>
  <exec_depend>rbsf_centerline_tracking</exec_depend>
  <exec_depend>rbsf_slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
